# designpowers-mcp

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  SETUP.md
.agents/plugins/designpowers/: README.md  hooks.json  mcp_config.json  plugin.json
.agents/workflows/: design.md  verify-accessibility-tools.md
.claude/commands/: design.md  verify-accessibility-tools.md
.github/workflows/: check-antigravity-plugin.yml  check-claude-surface.yml  check-conformance.yml  check-gemini-runner.yml  check-pipeline-run.yml
core/: README.md  registry.json
core/agents/accessibility-critic/: contract.md
core/agents/content-writer/: contract.md
core/agents/design-lead/: contract.md
core/conformance/: README.md
core/schemas/: evidence.schema.json
examples/design-md/: DESIGN.md
examples/pipeline-run/: README.md  brief.md  design-state.md  measure-build.mjs  run.sh
mcp-tools/accessibility/: README.md  motion-safety.js  motion-safety.test.mjs  package.json  readability.js  readability.test.mjs  server.js  server.test.mjs  target-size.js  target-size.test.mjs  verify-mcp.mjs
runners/claude/: README.md
runners/gemini/: README.md  pyproject.toml  requirements.txt
runners/gemini/designpowers_gemini/: __init__.py  __main__.py  agent.py  core.py  mcp.py
runners/gemini/tests/: conftest.py  test_agent_wiring.py  test_evidence_path.py
scripts/: check-antigravity-plugin.sh  check-claude-surface.sh  conformance.mjs  gen-antigravity-pointer-skills.mjs  setup.sh
skills/design-md/: SKILL.md
skills/using-designpowers/: SKILL.md
tests/: routing-fixtures.md
(+70 files in other folders)
